# TD

./: CMakeLists.txt
DS/: CMakeLists.txt  brouillon.cpp  ds2021.cpp  ds2022.cpp
Projet_2024_2025/: CMakeLists.txt
Projet_2024_2025/SFML_examples/: CMakeLists.txt
Projet_2024_2025/SFML_examples/test_SFML/: CMakeLists.txt  main.cpp
Projet_2024_2025/SFML_examples/test_SFML1/: CMakeLists.txt  Follower.cpp  Follower.hpp  Leader.cpp  main.cpp
Projet_2024_2025/SFML_examples/test_SFML2/: CMakeLists.txt  main.cpp
Projet_2024_2025/SFML_examples/test_SFML3/: CMakeLists.txt  Plane.cpp  Plane.hpp  main.cpp
TD1/: CMakeLists.txt  TD1_1.cpp  TD1_2.cpp  TD1_3.cpp  TD1_4.cpp  TD1_5.cpp  TD1_7.cpp  TD1_8.cpp  main.c
TD2/: CMakeLists.txt  Point3D.hpp  TD2_1.cpp  TD2_2.cpp  TD2_3.cpp  TD2_4.CPP  TD2_5.cpp  Trajectory.hpp  main2.c  textexo3.txt
TD3/: CMakeLists.txt  TD3_1.cpp
