cmake_minimum_required(VERSION 3.10)
project(TD1)

#Ajout des exécutables avec les fichiers sources
add_executable(TD1_1 "TD1_1.cpp")
add_executable(TD1_2 "TD1_2.cpp")
add_executable(TD1_3 "TD1_3.cpp")
add_executable(TD1_4 "TD1_4.cpp")
add_executable(TD1_5 "TD1_5.cpp")
add_executable(TD1_7 "TD1_7.cpp")
add_executable(TD1_8 "TD1_8.cpp")